@@ -1,5 +1,8 @@
 $Id: Changelog.txt,v 1.515 2024/03/19 23:40:30 nanard Exp $
 
+2024/04/29:
+  ipv6: prefer globally routable addresses
+
 VERSION 2.3.6 : released on 2024/03/20
 
 2024/03/05:
